--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,23 @@ img{
     height: 250px;
     width: 250px;
 }
+
+
+/* history side bar */
+.history-sidebar{
+    position: absolute;
+    height: 100%;
+    width: 15%;
+    height: 75%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #d2d2d2b4;
+    color: #000;
+    padding: 15px 15px 15px 10px;
+    margin-top: 5%;
+    display: flex;
+    overflow-y: scroll;
+    flex-direction: column;
+    align-items: center;
+}
