--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ button{
     height: 50px;
     border-radius: 20px;
     border: none;
+    cursor: pointer;
   }
 
 /* Animal Card */
@@ -43,6 +44,23 @@ img{
     color: #000;
     padding: 15px 15px 15px 10px;
     margin-top: 5%;
+    display: flex;
+    overflow-y: scroll;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* BanList */
+.BanList-nav{
+    height: 100%;
+    width: 20%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #d2d2d2;
+    color: #000;
+    padding: 15px 15px 15px 10px;
     display: flex;
     overflow-y: scroll;
     flex-direction: column;
